--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,9 @@
 body {
+  /* background-image: url('https://r4.wallpaperflare.com/wallpaper/201/929/79/digital-art-star-wars-death-star-black-wallpaper-f9b0b81d91ea8d1b36f708cf8041d68d.jpg'); */
   margin: 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
