--- a/public/index.css
+++ b/public/index.css
@@ -1,9 +1,8 @@
 body {
-  /* background-image: url('https://r4.wallpaperflare.com/wallpaper/201/929/79/digital-art-star-wars-death-star-black-wallpaper-f9b0b81d91ea8d1b36f708cf8041d68d.jpg'); */
+  background-image: url('https://lumiere-a.akamaihd.net/v1/images/star-wars-backgrounds-14_856985d9.jpeg');
   margin: 0;
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background-attachment: fixed;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
