--- a/src/App.css
+++ b/src/App.css
@@ -12,22 +12,38 @@ body {
 }
 
 .user-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (1fr)[2];
+  grid-template-rows: repeat(2, 1fr);
+  -ms-grid-columns: (1fr)[4];
+  grid-template-columns: repeat(4, 1fr);
+  height: fit-content;
+  width: 100%;
+  gap: 20px;
 }
 
-.user-card {
+/* .user-card {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin: 10px;
   padding: 20px;
   text-align: left;
   color: #fff;
+} */
+
+.card-content{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.user-list p{
-  color: #456483;
+.card-content p{
+  margin: 3px;
+}
+
+.user-list {
+  color: #6c9ccc;
   margin: 0px 0;
 
 }
@@ -45,13 +61,20 @@ input[type="text"] {
 }
 
 input{
-  width: 50%;
+  border-radius: 12px;
+  border: none;
+  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.1);
+  color: white;
+  width: 70%;
+  height: 30px;
   margin-bottom: 22px;
 }
 
 button {
   padding: 8px 16px;
-  background-color: #4caf50;
+  margin: 20px;
+  background-color: #0065fc;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -59,8 +82,7 @@ button {
 }
 
 button:disabled {
-  background-color: #ccc;
+  background-color: #a8a8a8;
   cursor: not-allowed;
 }
 
-/* Add more styles as needed */
