--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-
 body {
   background-image: url('../public/Background_img.jpeg');
   margin: 0;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: cover;
   font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
@@ -16,15 +16,13 @@ body {
 }
 
 .user-list {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: (1fr)[2];
-  grid-template-rows: repeat(2, 1fr);
-  -ms-grid-columns: (1fr)[4];
-  grid-template-columns: repeat(4, 1fr);
-  height: fit-content;
   width: 100%;
-  gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: auto;
+  gap: 25px;
+  color: #6c9ccc;
+  margin: 0px 0;
 }
 
 /* .user-card {
@@ -44,12 +42,6 @@ body {
 
 .card-content p{
   margin: 3px;
-}
-
-.user-list {
-  color: #6c9ccc;
-  margin: 0px 0;
-
 }
 
 .user-list img {
@@ -90,3 +82,13 @@ button:disabled {
   cursor: not-allowed;
 }
 
+@media screen and (max-width: 992px) {
+  .user-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  body {
+    background-position: center;
+    background-size: cover;
+  }
+}
